argo-app/glance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    istio.io/dataplane-mode: ambient
