argo-app/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-svc
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - name: glance-port
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
